<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvSearchOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/advanced_search_options"  
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSearchOptions"
        android:text="@string/image_size" 
        android:textSize="16sp"
        android:padding="10dp"/>

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageSize" />
    
    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageSize"
        android:text="@string/color_filter" 
        android:textSize="16sp"
        android:padding="10dp"/>
    
    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvColorFilter" />
    
    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvColorFilter"
        android:text="@string/image_type" 
        android:textSize="16sp"
        android:padding="10dp"/>
    
    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvImageType"
        android:layout_toRightOf="@+id/tvImageType" />
    
    
    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageType"
        android:text="@string/site_filter" 
        android:textSize="16sp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSiteFilter"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:ems="10" 
        android:hint="@string/enter_site_filter" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSiteFilter"
        android:layout_centerHorizontal="true"
        android:text="@string/save" 
        android:onClick="onSave"/>

</RelativeLayout>
